# codebase

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
codebase/: code_store.py
codebase/code_graph/: graph.py  models.py  utils.py
codebase/code_indexer/: _doc.md  indexer.py  models.py  repository.py
codebase/code_parser/: __init__.py  code_graph.py  code_visitor.py  graph_builder.py  helpers.py  models.py  utils.py  visitor.py
tests/: test_helpers.py
tests/code_graph/: test_code_graph.py
tests/code_parser/: test_code_graph.py  test_code_visitor.py  test_graph_builder.py  test_helpers.py
